2004-11-21  jrandom     * Update the I2PTunnel web interface to include an option for the new       streaming lib (which is ignored until the 0.4.2 release).     * Revised the I2PTunnel web interface to keep the I2CP options of client       and httpclient tunnels in sync, as they all share the same I2CP session.
Monotone-Parent: d22c289ee15ce1353eb475c8b2c25a8eacb3a0a8
Monotone-Revision: 1ee3dea66b9e82187af851e0ffd2c1fc6309cc6b

Monotone-Author: jrandom
Monotone-Date: 2004-11-22T17:57:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.78 2004/11/21 14:42:57 jrandom Exp $
+$Id: history.txt,v 1.79 2004/11/21 17:31:33 jrandom Exp $
+
+2004-11-21  jrandom
+    * Update the I2PTunnel web interface to include an option for the new 
+      streaming lib (which is ignored until the 0.4.2 release).
+    * Revised the I2PTunnel web interface to keep the I2CP options of client 
+      and httpclient tunnels in sync, as they all share the same I2CP session.
 
 2004-11-21  jrandom
     * Only allow small clock skews after the first 10 minutes of operation
