--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.81 2004/11/22 20:12:36 jrandom Exp $
+$Id: history.txt,v 1.82 2004/11/25 16:57:19 jrandom Exp $
+
+* 2004-11-26  0.4.2 released
+
+2004-11-26  jrandom
+    * Enable the new streaming lib as the default.  That means, for any 
+      substantial definition, it is NOT BACKWARDS COMPATIBLE.  
 
 2004-11-25  jrandom
     * Revised the installer to include start menu and desktop shortcuts for
