--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.82 2004/11/25 16:57:19 jrandom Exp $
+$Id: history.txt,v 1.83 2004/11/26 10:20:14 jrandom Exp $
+
+2004-11-27  jrandom
+    * Fix for a fast loop caused by a race in the new streaming library (thanks
+      DrWoo, frontier, pwk_, and thetower!)
+    * Minor updates to the SimpleTimer and Connection to help track down a
+      high CPU usage problem (dumping debug info to stdout/wrapper.log if too
+      many events/tasks fire in a second)
+    * Minor fixes for races on client disconnects (causing NPEs)
 
 * 2004-11-26  0.4.2 released
 
