2004-11-27  jrandom     * Removed the I2PTunnel inactivity timeout thread, since the new streaming       lib can do that (without an additional per-connection thread).     * Close the I2PTunnel forwarder threads more aggressively
Monotone-Parent: 61ec15370f3e4e1afdaffbb264339bc4647c433d
Monotone-Revision: 27a6a45172d37ff7c93d4b682ddbdc15921d1373

Monotone-Author: jrandom
Monotone-Date: 2004-11-27T05:17:06
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.83 2004/11/26 10:20:14 jrandom Exp $
+$Id: history.txt,v 1.84 2004/11/26 22:54:18 jrandom Exp $
+
+2004-11-27  jrandom
+    * Removed the I2PTunnel inactivity timeout thread, since the new streaming
+      lib can do that (without an additional per-connection thread).
+    * Close the I2PTunnel forwarder threads more aggressively
 
 2004-11-27  jrandom
     * Fix for a fast loop caused by a race in the new streaming library (thanks
