2004-11-28  jrandom     * Accept IP address detection changes with a 2-out-of-3 minimum.     * As long as the router is up, keep retrying to bind the I2CP listener.     * Decrease the java service wrapper ping frequency to once every 10       minutes, rather than once every 5 seconds.
Monotone-Parent: 0ab1e09d15e7dc4d37280fd9d87d0f42b5c43e88
Monotone-Revision: a6c8baf9da30c05259e8efe8b9a7f31af7c3a3ab

Monotone-Author: jrandom
Monotone-Date: 2004-11-29T01:58:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.85 2004/11/27 00:17:06 jrandom Exp $
+$Id: history.txt,v 1.86 2004/11/27 16:02:06 jrandom Exp $
+
+2004-11-28  jrandom
+    * Accept IP address detection changes with a 2-out-of-3 minimum.
+    * As long as the router is up, keep retrying to bind the I2CP listener.
+    * Decrease the java service wrapper ping frequency to once every 10 
+      minutes, rather than once every 5 seconds.
 
 2004-11-27  jrandom
     * Some cleanup and bugfixes for the IP address detection code where we 
