2004-11-29  jrandom     * Minor fixes to avoid unnecessary errors on shutdown (thanks susi!)
Monotone-Parent: 4d85bed095e1c30bdf702a8b78b3192d0cdf4869
Monotone-Revision: 7598091e0a6527cb9c90f9cfb1039e02a55dc390

Monotone-Author: jrandom
Monotone-Date: 2004-11-29T23:24:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.87 2004/11/28 20:58:39 jrandom Exp $
+$Id: history.txt,v 1.88 2004/11/29 16:57:14 jrandom Exp $
+
+2004-11-29  jrandom
+    * Minor fixes to avoid unnecessary errors on shutdown (thanks susi!)
 
 2004-11-29  jrandom
     * Reduced contention for local client delivery
