--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.89 2004/11/29 18:24:50 jrandom Exp $
+$Id: history.txt,v 1.90 2004/11/30 18:41:52 jrandom Exp $
+
+* 2004-12-01  0.4.2.1 released
+
+2004-12-01  jrandom
+    * Strip out any of the Accept-* HTTP header lines, and always make sure to
+      include the forged User-agent header.
+    * Adjust the default read timeout on the eepproxy to 60s, unless 
+      overridden.
+    * Minor tweak on stream shutdown.
 
 2004-11-30  jrandom
     * Render the burst rate fields on /config.jsp properly (thanks ugha!)
