--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.91 2004/12/01 17:31:56 jrandom Exp $
+$Id: history.txt,v 1.92 2004/12/01 19:27:27 jrandom Exp $
+
+2004-12-01  jrandom
+    * Fix for a race in the streaming lib as caused by some odd SAM activity
 
 * 2004-12-01  0.4.2.2 released
 
