--- a/apps/sam/c/doc/todo.txt
+++ b/apps/sam/c/doc/todo.txt
@@ -1,6 +1,6 @@
 I need to do these things:
 
-* SAM raw support
+* SAM raw support (partially complete)
 * Write an instruction manual
 * Make dest a dynamic string
 * Change SAM parser to use a hashmap
