2004-12-05  jrandom     * Default the I2CP listener to localhost only, unless overridden by       i2cp.tcp.bindAllInterfaces=true (thanks dm!)     * More SAM fixes for things recently broken (whee)
Monotone-Parent: 56ce99ca9efe7126837acd9daf70c1db07f68947
Monotone-Revision: c5045af8935381248a765dca15c4366320d7d421

Monotone-Author: jrandom
Monotone-Date: 2004-12-06T00:54:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.95 2004/12/05 05:22:58 jrandom Exp $
+$Id: history.txt,v 1.96 2004/12/05 10:32:34 jrandom Exp $
+
+2004-12-05  jrandom
+    * Default the I2CP listener to localhost only, unless overridden by 
+      i2cp.tcp.bindAllInterfaces=true (thanks dm!)
+    * More SAM fixes for things recently broken (whee)
 
 2004-12-05  jrandom
     * Fix the recently broken SAM bridge (duh)
