--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.97 2004/12/05 19:54:08 jrandom Exp $
+$Id: history.txt,v 1.98 2004/12/05 21:08:03 jrandom Exp $
+
+2004-12-06  jrandom
+    * Don't propogate streaming connection failures out to the SAM bridge as
+      fatal errors.
+    * Dont barf on repeated I2CP closure.
 
 2004-12-05  jrandom
     * Explicitly use "127.0.0.1" to bind the I2CP listener, not the JVM's
