2004-12-06  jrandom     * Don't do a 'passive flush' while there are already outbound messages       unacked.     * Show the reseed link if up to 10 peers profiles are active (thanks       dburton!)
Monotone-Parent: 1a6838a61bd3b3aaf1b7eb42b9d240001b74f811
Monotone-Revision: bc5fc8c0a1e5fe80bb0062e9dbe57d224470ce14

Monotone-Author: jrandom
Monotone-Date: 2004-12-07T01:09:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.98 2004/12/05 21:08:03 jrandom Exp $
+$Id: history.txt,v 1.99 2004/12/06 00:03:58 jrandom Exp $
+
+2004-12-06  jrandom
+    * Don't do a 'passive flush' while there are already outbound messages 
+      unacked.
+    * Show the reseed link if up to 10 peers profiles are active (thanks 
+      dburton!)
 
 2004-12-06  jrandom
     * Don't propogate streaming connection failures out to the SAM bridge as
