--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,20 @@
-$Id: history.txt,v 1.104 2004/12/11 04:26:24 jrandom Exp $
+$Id: history.txt,v 1.105 2004/12/13 08:45:52 jrandom Exp $
+
+2004-12-14  jrandom
+    * Reenable the probabalistic drop on the TCP queues to deal with good old
+      fashioned bandwidth limiting.  However, by default the probability is
+      rigged to reserve 0% of the queue free - meaning we just aggressively
+      fail messages in the queue if we're transferring too slowly.  That
+      reservation factor can be increased with 'tcp.queueFreeFactor=0.25'
+      (or whatever) and the drop code can be disabled with the parameter
+      'tcp.dropProbabalistically=false'.
+    * Still penalize a peer on tunnel failure, but don't immediately drop 
+      their capacity to 0.
+    * More aggressively ACK duplicates
+    * Randomize the timestamper period
+    * Display the clock skew on the connection logs when a peer sends it.
+    * Allow the timestamper to fix skews of up to 10 minutes
+    * Logging
 
 2004-12-13  jrandom
     * Added some error checking on the new client send job (thanks duck!)
