2004-12-14  jrandom     * Periodically send a message along all I2NP connections with the router's       current time, allowing the receiving peer to determine that the clock       has skewed too much, and hence, disconnect.  For backwards compatability       reasons, this is being kludged into a DeliveryStatusMessage (ewww).  The       next time we have a backwards compatability break, we can put in a proper       message setup for it.
Monotone-Parent: e5918c5022bf01c8bf5fcf8ec622cb55bc7c23a3
Monotone-Revision: 47ab81909c3eb234fac19b028b075627076d9f0e

Monotone-Author: jrandom
Monotone-Date: 2004-12-14T16:42:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.105 2004/12/13 08:45:52 jrandom Exp $
+$Id: history.txt,v 1.106 2004/12/14 06:54:39 jrandom Exp $
+
+2004-12-14  jrandom
+    * Periodically send a message along all I2NP connections with the router's
+      current time, allowing the receiving peer to determine that the clock 
+      has skewed too much, and hence, disconnect.  For backwards compatability
+      reasons, this is being kludged into a DeliveryStatusMessage (ewww).  The
+      next time we have a backwards compatability break, we can put in a proper
+      message setup for it.
 
 2004-12-14  jrandom
     * Reenable the probabalistic drop on the TCP queues to deal with good old
