2004-12-16  jrandom     * Catch another oddball case for a reset connection in the streaming lib.     * Add a dumpprofile.jsp page, called with ?peer=base64OfPeerHash, which       dumps the current state of that peer's profile.  Instead of the full       base64, you can pass in however many characters you have and it will       return the first match found.
Monotone-Parent: 71287a19a8d3fa2b304574d614bf5d828bd7850e
Monotone-Revision: 4dbf117171ced6b2c9bcc83650541997efd52316

Monotone-Author: jrandom
Monotone-Date: 2004-12-16T10:21:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.108 2004/12/15 21:45:56 jrandom Exp $
+$Id: history.txt,v 1.109 2004/12/16 00:42:04 jrandom Exp $
+
+2004-12-16  jrandom
+    * Catch another oddball case for a reset connection in the streaming lib.
+    * Add a dumpprofile.jsp page, called with ?peer=base64OfPeerHash, which
+      dumps the current state of that peer's profile.  Instead of the full 
+      base64, you can pass in however many characters you have and it will
+      return the first match found.
 
 2004-12-16  jrandom
     * Remove the randomized factor in the tunnel rejection by bandwidth -
