--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.110 2004/12/16 05:21:24 jrandom Exp $
+$Id: history.txt,v 1.111 2004/12/17 23:07:13 jrandom Exp $
+
+2004-12-19  scintilla
+    * Convert native jcpuid code from C++ to C. This should alleviate build
+      problems experienced by some users.
 
 * 2004-12-18  0.4.2.4 released
 
