2004-12-19  jrandom     * Added three new stats - router.activePeers, router.fastPeers, and       router.highCapacityPeers, updated every minute
Monotone-Parent: fb89ad4a4df43b6d6ef6283f33ee492fd077727e
Monotone-Revision: 8872e18574eb47331acf3836254131c725db28c1

Monotone-Author: jrandom
Monotone-Date: 2004-12-19T16:27:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.112 2004/12/19 01:25:27 scintilla Exp $
+$Id: history.txt,v 1.113 2004/12/19 06:04:57 jrandom Exp $
+
+2004-12-19  jrandom
+    * Added three new stats - router.activePeers, router.fastPeers, and 
+      router.highCapacityPeers, updated every minute
 
 2004-12-19  jrandom
     * Added a new i2ptunnel type: 'httpserver', allowing you to specify what
