--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.113 2004/12/19 06:04:57 jrandom Exp $
+$Id: history.txt,v 1.114 2004/12/19 11:27:10 jrandom Exp $
+
+2004-12-19  jrandom
+    * Fix for a race on startup wrt the new stats (thanks susi!)
 
 2004-12-19  jrandom
     * Added three new stats - router.activePeers, router.fastPeers, and 
