2004-12-20  jrandom     * No longer do a blocking DNS lookup within the jobqueue (thanks mule!)     * Set a 60s dns cache TTL, instead of 0s.  Most users who used to use       dyndns/etc now just use IP autodetection, so the old "we need ttl=0"       reasoning is gone.
Monotone-Parent: 9a06b88b197164baca9d317e97af716534f49617
Monotone-Revision: 6af68ca77745f2c31c45d9464a72f637024f067a

Monotone-Author: jrandom
Monotone-Date: 2004-12-20T05:14:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.114 2004/12/19 11:27:10 jrandom Exp $
+$Id: history.txt,v 1.115 2004/12/19 13:55:09 jrandom Exp $
+
+2004-12-20  jrandom
+    * No longer do a blocking DNS lookup within the jobqueue (thanks mule!)
+    * Set a 60s dns cache TTL, instead of 0s.  Most users who used to use
+      dyndns/etc now just use IP autodetection, so the old "we need ttl=0"
+      reasoning is gone.
 
 2004-12-19  jrandom
     * Fix for a race on startup wrt the new stats (thanks susi!)
