* 2004-12-21  0.4.2.5 released 2004-12-21  jrandom     * Track a new stat for expired client leases (client.leaseSetExpired).
Monotone-Parent: 48b19eb14736a90191886a4ea8b4cdb979ffe3fc
Monotone-Revision: 36fb4f4fcece8d75141c47a33f001ba9b4159387

Monotone-Author: jrandom
Monotone-Date: 2004-12-21T18:23:03
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_4_2_5

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.116 2004/12/20 00:14:56 jrandom Exp $
+$Id: history.txt,v 1.117 2004/12/21 11:32:50 jrandom Exp $
+
+* 2004-12-21  0.4.2.5 released
+
+2004-12-21  jrandom
+    * Track a new stat for expired client leases (client.leaseSetExpired).
 
 2004-12-21  jrandom
     * Cleaned up the postinstall/startup scripts a bit more to handle winME,
